--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
             <th>Rating (out of 10)</th>
           </tr>
           <tr>
+            <td>HTML5</td>
+            <td>9</td>
+          </tr>
+          <tr>
+            <td>CSS3</td>
+            <td>9</td>
+          </tr>
+          <tr>
             <td>Java</td>
             <td>9</td>
           </tr>
@@ -63,6 +71,14 @@
           <tr>
             <td>MongoDB</td>
             <td>7</td>
+          </tr>
+          <tr>
+            <td>Git</td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <td>Github</td>
+            <td>8</td>
           </tr>
         </table>
       </div>
