--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>My Profile</title>
-    
   </head>
   <body>
     <div class="container">
       <h1>Profile Page</h1>
-      <img src="./assets/passport.jpg" alt="" />
-
+      <div class="profile-img">
+        <img src="./assets/passport.jpg" alt="" />
+      </div>
+    
       <div class="personal-details">
         <h2>Personal Details</h2>
         <p><strong>Name: </strong>Ayush Mitra</p>
