--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>My Profile</title>
   </head>
   <body>
@@ -12,7 +18,7 @@
       <div class="profile-img">
         <img src="./assets/passport.jpg" alt="" />
       </div>
-    
+
       <div class="personal-details">
         <h2>Personal Details</h2>
         <p><strong>Name: </strong>Ayush Mitra</p>
